force-app/main/default/objects/WC_Slack_Approval_Config__mdt/WC_Slack_Approval_Config__mdt.object-meta.xml
<CustomObject>
    <description>WC — Slack channel / workspace ids for Flow “Send Slack Message” (avoid hard-coding in Flow).</description>
    <label>WC Slack Approval Config</label>
    <pluralLabel>WC Slack Approval Configs</pluralLabel>
</CustomObject>