force-app/main/default/objects/WC_Slack_Approval_Config__mdt/fields/Electra_Auto_Approve_Delay_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Electra_Auto_Approve_Delay_Seconds__c</fullName>
    <description>WC — Wait this many seconds after Slack approver notification before Electra may auto-approve (WC_Electra_Auto_Check_At__c). Default 60.</description>
    <label>Electra Auto Approve Delay Seconds</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>