force-app/main/default/objects/WC_Slack_Approval_Config__mdt/fields/Electra_Poll_Interval_Sec__c.field-meta.xml
<CustomField>
    <fullName>Electra_Poll_Interval_Sec__c</fullName>
    <description>WC — How often WC_ElectraAutoApproveSchedulable runs (seconds). 60 = every minute, 120 = every 2 min. Min 60.</description>
    <label>Electra Poll Interval Sec</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>