force-app/main/default/objects/WC_Slack_Approval_Config__mdt/fields/Skip_Slack_Signature_Verification__c.field-meta.xml
<CustomField>
    <fullName>Skip_Slack_Signature_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, X-Slack-Signature is not verified. Use only in sandbox when RestRequest.requestBody is empty and reconstructed bodies never match Slack’s HMAC. NEVER enable in production — anyone could POST to your endpoint.</description>
    <label>Skip Slack Signature Verification</label>
    <type>Checkbox</type>
</CustomField>