force-app/main/default/objects/WC_Slack_Approval_Config__mdt/fields/Slack_Bot_Oauth_Token__c.field-meta.xml
<CustomField>
    <fullName>Slack_Bot_Oauth_Token__c</fullName>
    <description>WC — Bot User OAuth Token (xoxb-…) for Slack Web API chat.update. Required to refresh the approver message after Electra auto-approve. Store only in org config, not in source control.</description>
    <label>Slack Bot OAuth Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>