force-app/main/default/objects/WC_Slack_Approval_Config__mdt/fields/Slack_Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channel_Id__c</fullName>
    <description>Slack Conversation ID for #warranty-approvals (starts with C).</description>
    <label>Slack Channel Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>