force-app/main/default/objects/WC_Slack_Approval_Config__mdt/fields/Slack_Incoming_Webhook_Url__c.field-meta.xml
<CustomField>
    <fullName>Slack_Incoming_Webhook_Url__c</fullName>
    <description>HTTPS URL from Slack Incoming Webhook (Manage app → Incoming Webhooks). Used by WC Post Slack Webhook Message when Flow input Webhook URL is blank.</description>
    <label>Slack Incoming Webhook Url</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>