force-app/main/default/objects/WC_Slack_Approval_Config__mdt/fields/Slack_Signing_Secret__c.field-meta.xml
<CustomField>
    <fullName>Slack_Signing_Secret__c</fullName>
    <description>Signing secret from Slack app (Basic Information → Signing Secret). Used by WC_SlackInteractivityRest to verify X-Slack-Signature.</description>
    <label>Slack Signing Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>