force-app/main/default/objects/WC_Slack_Approval_Config__mdt/fields/Slack_Workspace_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_Workspace_Id__c</fullName>
    <description>Slack workspace / team id if required by your Send Slack Message action.</description>
    <label>Slack Workspace Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>