force-app/main/default/objects/WC_Slack_Approval_Config__mdt/fields/WhatsApp_Media_Bearer_Token__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Media_Bearer_Token__c</fullName>
    <description>WC — Bearer token for GET requests to WhatsApp/Meta media URLs when downloading intake images (e.g. Graph API user token). Store only in org Custom Metadata, never in source control.</description>
    <label>WhatsApp Media Bearer Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>